--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,20 @@
-/* globals.css */
+/* custom.css */
+.cds--tabs__nav-item--close-icon--selected {
+  display: none !important;
+}
+
+.cds--tabs__nav-item--close--hidden {
+  display: none !important;
+}
+
+.cds--tab--overflow-nav-button--hidden {
+  display: none !important;
+}
+
+.cds--tab--overflow-nav-button--hidden {
+  display: none !important;
+}
+
 .header {
   margin-bottom: 1rem;
   padding: 1rem;
@@ -19,6 +35,7 @@
   outline: none;
   flex: 1;
 }
+
 
 .tabs-column {
   background-color: #f8f8f8;
